objects/ASI_MFM_Importation_Document_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中华人民共和国海关进口货物报关单（报关单）</fullName>
                </value>
                <value>
                    <fullName>海关进口关税专用缴款书（税单）</fullName>
                </value>
                <value>
                    <fullName>海关进口增值税专用缴款书（税单）</fullName>
                </value>
                <value>
                    <fullName>海关进口消费税专用缴款书（税单）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Gov_Proof__c</fullName>
        <label>Gov Proof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>需要</fullName>
                </value>
                <value>
                    <fullName>不需要</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Importation_Document__c</fullName>
        <label>Importation Document</label>
        <referenceTo>ASI_MFM_Importation_Document__c</referenceTo>
        <relationshipLabel>Importation Document Details</relationshipLabel>
        <relationshipName>Importation_Document_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Possible_to_Replace__c</fullName>
        <label>Possible to Replace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>能</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Product_Specifications__c</fullName>
        <formula>ASI_MFM_SKU_Code__r.ASI_FOC_SKU_Chinese_Description__c + &quot;(&quot; +  ASI_MFM_SKU_Code__r.ASI_FOC_Packing_Description__c + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Specifications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Required_Documents_Year__c</fullName>
        <label>Required Documents Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Code</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Importation Document Details</relationshipLabel>
        <relationshipName>Importation_Document_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Use_of_Document__c</fullName>
        <label>Use of Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Importation Document Detail</label>
    <nameField>
        <displayFormat>IDD-{YY}{000000}</displayFormat>
        <label>Importation Document Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Importation Document Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Importation_Document_Detail</fullName>
        <active>true</active>
        <label>CN Importation Document Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_CN_CheckContractNumber</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(ASI_MFM_Gov_Proof__c) == &apos;需要&apos; &amp;&amp;  ISBLANK(ASI_MFM_Contract_Number__c) &amp;&amp;  CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_CN_&apos;)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Contract_Number__c</errorDisplayField>
        <errorMessage>Please input Contract Number.</errorMessage>
    </validationRules>
</CustomObject>